--- a/pom.xml
+++ b/pom.xml
@@ -9,29 +9,18 @@
     <name>My Example</name>
 
     <dependencies>
-             
-         <dependency>
-                  <groupId>org.apache.hive</groupId>
-                   <artifactId>hive-service</artifactId>
-                  <version>2.0.1</version>
-         </dependency>
-             
-         <dependency>
-                  <groupId>org.apache.hive</groupId>
-                  <artifactId>hive-service</artifactId>
-                  <version>1.1.1</version>
-         </dependency>
-             
-         <dependency>
-                  <groupId>org.apache.hive</groupId>
-                  <artifactId>hive-metastore</artifactId>
-                  <version>2.0.1</version>
-         </dependency>
-             
-         <dependency>
-                  <groupId>org.apache.hive</groupId>
-                  <artifactId>hive-metastore</artifactId>
-                  <version>1.1.1</version>
-         </dependency>
+    
+        
+
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.4</version>
+</dependency>
+
+
+
     </dependencies>
+
 </project>
