--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,65 @@
     <version>2.9.5</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.9</version>
+</dependency>
 
+<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>1.2</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.hive/hive-metastore -->
+<dependency>
+    <groupId>org.apache.hive</groupId>
+    <artifactId>hive-metastore</artifactId>
+    <version>2.0.1</version>
+</dependency>
+             
+<!-- https://mvnrepository.com/artifact/org.apache.hive/hive-service -->
+<dependency>
+    <groupId>org.apache.hive</groupId>
+    <artifactId>hive-service</artifactId>
+    <version>2.0.1</version>
+</dependency>
+             
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.3</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpcore</artifactId>
+    <version>4.4.6</version>
+</dependency>
+             
+<!-- https://mvnrepository.com/artifact/org.apache.thrift/libthrift -->
+<dependency>
+    <groupId>org.apache.thrift</groupId>
+    <artifactId>libthrift</artifactId>
+    <version>0.9.0</version>
+    <type>pom</type>
+</dependency>
+             
+<!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+<dependency>
+    <groupId>org.apache.zookeeper</groupId>
+    <artifactId>zookeeper</artifactId>
+    <version>3.4.11</version>
+    <type>pom</type>
+</dependency>
+
+             
 
     </dependencies>
 
