--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
     <version>0.9.0</version>
     <type>pom</type>
 </dependency>
+  
+<!-- https://mvnrepository.com/artifact/org.apache.thrift/libfb303 -->
+<dependency>
+    <groupId>org.apache.thrift</groupId>
+    <artifactId>libfb303</artifactId>
+    <version>0.9.0</version>
+    <type>pom</type>
+</dependency>            
              
 <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
 <dependency>
@@ -82,6 +90,19 @@
     <type>pom</type>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.5.11</version>
+</dependency>
+             
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.14</version>
+</dependency>
              
 
     </dependencies>
